--- a/reactTraining/public/index.html
+++ b/reactTraining/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Christopher Jones' React Training</title>
+    <!--Animate CSS-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
